--- a/two/index.html
+++ b/two/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <form action="./success.html">
+        <!-- press ctrl + space to get the various types -->
+        <input type="">
+        
         <div>
             <!-- <label for="first_name">First Name:</label> -->
             <input name="first_name" type="text" placeholder="Enter your first name"/>
