--- a/three/index.html
+++ b/three/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDT | Day 3</title>
 </head>
+
 <body>
     <!-- this file is for iframe tag -->
     <!-- iframe tag is used to embed another webpage in a website -->
     <h1>IFRAME TAG</h1>
-    <iframe src="https://www.youtube.com/embed/c8vD5gDUcoo?si=RuBYUlMlfCyI2ex3" width="1000px" height="500px" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/embed/c8vD5gDUcoo?si=RuBYUlMlfCyI2ex3" width="1000px" height="500px"
+        frameborder="0"></iframe>
     <h1>EMBED TAG</h1>
     <embed width="1000px" height="500px" src="https://www.youtube.com/embed/c8vD5gDUcoo?si=RuBYUlMlfCyI2ex3" type="" />
 </body>
