--- a/one/index.html
+++ b/one/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDT | Day 1</title>
+    <style>
+        .cont-parent{
+            height: 700px;
+            border: 2px solid black;
+            background-color: #ccc;
+            max-width: 1400px;
+            margin: auto;
+        }
+
+        .container {
+            border: 2px solid black;
+            border-radius: 0 30px 0 30px;
+
+            outline: 10px solid yellow;
+            /* border-top-left-radius: 0px;
+            border-bottom-right-radius: 0px; */
+
+            /* height: 300px; */
+            width: 300px;
+
+            /* margin: auto; */
+            /* margin-top: 200px;
+            margin-bottom: 200px; */
+            margin: 150px auto;
+
+            padding: 100px 30px;
+
+            color: #002f94;
+
+            text-align: center;
+            vertical-align: middle;
+            /* direction: rtl; */
+            /* unicode-bidi: isolate-override; */
+
+            /* background-color: yellow; */
+            background-image: url(./pikachu.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            /* background-size: cover; */
+            /* background: #002f94 url(./pikachu.jpg) no-repeat scroll; */
+        }
+    </style>
 </head>
+
 <body>
     <h1>SDT | Day 1</h1>
     <h2>SDT | Day 1</h2>
@@ -13,7 +58,9 @@
     <h5>SDT | Day 1</h5>
     <h6>SDT | Day 1</h6>
 
-    <p>Lorem ipsum dolor sit <u>amet consectetur</u> adipisicing elit. Veniam mollitia aspernatur qui ex, eius minus consequatur <abbr title="abbreviation hai ye">doloribus</abbr>  <br> laudantium atque deleniti <strong>dolorum nostrum hic</strong> ratione, libero recusandae ad dolor architecto. Expedita?</p>
+    <p>Lorem ipsum dolor sit <u>amet consectetur</u> adipisicing elit. Veniam mollitia aspernatur qui ex, eius minus
+        consequatur <abbr title="abbreviation hai ye">doloribus</abbr> <br> laudantium atque deleniti <strong>dolorum
+            nostrum hic</strong> ratione, libero recusandae ad dolor architecto. Expedita?</p>
 
     <hr>
 
@@ -25,11 +72,11 @@
     <button onclick="alert('Button Clicked!')">Button</button>
     <br><br>
 
-    <table border="1" >
+    <table border="1">
         <tr>
             <th>Name</th>
             <th>Roll No.</th>
-            <th>Course</th> 
+            <th>Course</th>
         </tr>
 
         <tr>
@@ -67,9 +114,18 @@
         <li>Four</li>
     </ol>
 
-    <h1>Images</h1>
+    <!-- <h1>Images</h1>
     <img src="./pikachu.jpg" alt="agar image load nahi hui... to ye dikhayga" />
-    <img src="./basketball.png" alt="agar image load nahi hui... to ye dikhayga" />
+    <img src="./basketball.png" alt="agar image load nahi hui... to ye dikhayga" /> -->
+
+
+    <div class="cont-parent">
+        <div class="container">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil excepturi omnis, repellat esse nostrum
+            dignissimos dolore sed pariatur ab delectus dicta ipsa vero quod nemo! Aliquid dicta quaerat blanditiis ea.
+        </div>
+    </div>
 
 </body>
+
 </html>
