--- a/css3/index.html
+++ b/css3/index.html
@@ -5,20 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SDT | CSS GRID</title>
-</head> 
+    <title>SDT | CSS POSITIONS</title>
+</head>
 
 <body>
     <div class="parent">
         <div class="child child-1">CHILD 1</div>
         <div class="child child-2">CHILD 2</div>
         <div class="child child-3">CHILD 3</div>
-        <div class="child child-4">CHILD 4</div>
+        <div class="child child-4">
+            <div class="sub-child">SUB CHILD</div>
+        </div>
         <div class="child child-5">CHILD 5</div>
-        <div class="child child-6">CHILD 6</div>
-        <div class="child child-7">CHILD 7</div>   
     </div>
-
 </body>
 
 </html>
